--- a/src/app/pages/shipment-list/shipment-list.component.html
+++ b/src/app/pages/shipment-list/shipment-list.component.html
@@ -38,7 +38,11 @@
       <div *ngIf="isLocalSotrageToken!=null;  else ElseBlock">
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a href="javascript: void(0);" class="nav-link" (click)="logout()">Logout</a>
+            <a href="javascript: void(0);" class="nav-link" (click)="logout()">Sign
+              out</a>
+          </li>
+          <li class="nav-item">
+              <a href="javascript: void(0);" class="nav-link" (click)="myprofile()">My Profile</a>
           </li>
         </ul>
       </div>
