--- a/src/app/pages/add-shipment/add-shipment.component.html
+++ b/src/app/pages/add-shipment/add-shipment.component.html
@@ -160,7 +160,7 @@
                                     <mat-form-field appearance="outline"  appearance="outline" fxFlex="30" class="pr-4"  style="width: 25%;">
                                         <mat-label>Phone #</mat-label>
                                         <input matInput #SenderPhone 
-                                               formControlName="SenderPhone" maxlength="11" required>
+                                               formControlName="SenderPhone"  required>
                                         <mat-error>Phone # is required!</mat-error>
                                     </mat-form-field>
 
@@ -291,7 +291,7 @@
                                     <mat-form-field appearance="outline" fxFlex="30" class="pr-4"  style="width: 25%;">
                                         <mat-label>Phone #</mat-label>
                                         <input matInput #phone 
-                                               formControlName="ReceiverPhone" maxlength="11" required>
+                                               formControlName="ReceiverPhone"  required>
                                         <mat-error>Phone # is required!</mat-error>
                                     </mat-form-field>
                                     
