--- a/src/app/pages/add-shipment/add-shipment.component.html
+++ b/src/app/pages/add-shipment/add-shipment.component.html
@@ -967,7 +967,7 @@
                         <ng-template matStepLabel></ng-template>
     
                         <div class="h2 m-16" fxLayout="row" fxLayoutAlign="center center">
-                            Thank your for your time.
+                            Thank you for your time.
                         </div>
     
                         <div fxLayout="row" fxLayoutAlign="center center">
